<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="20dp"
    android:id="@+id/timeLayout"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="@layout/activity_main">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/schedule"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/schedule"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:gravity="center"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/timeText"
        android:layout_margin="5dp"
        app:layout_constraintTop_toBottomOf="@+id/schedule"
        android:weightSum="3"
        >

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/hour"
        android:textColor="@color/black"
        android:gravity="center"
        />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/minute"
            android:textColor="@color/black"
            android:gravity="center"
            />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/second"
            android:textColor="@color/black"
            android:gravity="center"
            />

    </LinearLayout>



<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:id="@+id/timeInput"
    android:layout_margin="5dp"
    app:layout_constraintTop_toBottomOf="@+id/timeText"
    android:weightSum="6"
    >

    <LinearLayout
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:background="@drawable/time_bg"
        android:layout_margin="5dp"
       >


        <EditText
            android:layout_width="50dp"
            android:layout_height="36dp"
            android:id="@+id/h1"
            android:digits="012"
            android:background="@null"
            android:textSize="18sp"
            android:layout_gravity="center"
            android:maxLines="1"
            android:maxLength="1"
            android:inputType="time"
            android:gravity="center"
            android:imeOptions="actionNext"
            android:singleLine="true"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="2dp"
            android:textColor="@color/black"
            android:paddingStart="5dp"
            tools:ignore="RtlSymmetry" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:background="@drawable/time_bg"
        android:layout_margin="5dp"
        >


        <EditText
            android:layout_width="50dp"
            android:layout_height="36dp"
            android:id="@+id/h2"
            android:background="@null"
            android:textSize="18sp"
            android:layout_gravity="center"
            android:maxLines="1"
            android:maxLength="1"
            android:inputType="time"
            android:gravity="center"
            android:imeOptions="actionNext"
            android:singleLine="true"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="2dp"
            android:textColor="@color/black"
            android:paddingStart="5dp"
            tools:ignore="RtlSymmetry"
           />


    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:background="@drawable/time_bg"
        android:layout_marginStart="25dp"
        android:layout_marginTop="5dp"
      >


        <EditText
            android:layout_width="50dp"
            android:layout_height="36dp"
            android:id="@+id/m1"
            android:background="@null"
            android:textSize="18sp"
            android:digits="0123456"
            android:layout_gravity="center"
            android:maxLines="1"
            android:maxLength="1"
            android:inputType="time"
            android:gravity="center"
            android:imeOptions="actionNext"
            android:singleLine="true"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="2dp"
            android:textColor="@color/black"
            android:paddingStart="5dp"
            tools:ignore="RtlSymmetry" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:background="@drawable/time_bg"
        android:layout_margin="5dp"
        >


        <EditText
            android:layout_width="50dp"
            android:layout_height="36dp"
            android:id="@+id/m2"
            android:background="@null"
            android:textSize="18sp"
            android:layout_gravity="center"
            android:maxLines="1"
            android:maxLength="1"
            android:inputType="time"
            android:gravity="center"
            android:imeOptions="actionNext"
            android:singleLine="true"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="2dp"
            android:textColor="@color/black"
            android:paddingStart="5dp"
            tools:ignore="RtlSymmetry" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:background="@drawable/time_bg"
        android:layout_marginStart="25dp"
        android:layout_marginTop="5dp"
      >


        <EditText
            android:layout_width="50dp"
            android:layout_height="36dp"
            android:id="@+id/s1"
            android:background="@null"
            android:textSize="18sp"
            android:digits="0123456"
            android:layout_gravity="center"
            android:maxLines="1"
            android:maxLength="1"
            android:inputType="time"
            android:gravity="center"
            android:imeOptions="actionNext"
            android:singleLine="true"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="2dp"
            android:textColor="@color/black"
            android:paddingStart="5dp"
            tools:ignore="RtlSymmetry" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:background="@drawable/time_bg"
        android:layout_margin="5dp"
       >


        <EditText
            android:layout_width="50dp"
            android:layout_height="36dp"
            android:id="@+id/s2"
            android:background="@null"
            android:textSize="18sp"
            android:layout_gravity="center"
            android:maxLines="1"
            android:maxLength="1"
            android:inputType="time"
            android:gravity="center"
            android:imeOptions="actionNext"
            android:singleLine="true"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="2dp"
            android:textColor="@color/black"
            android:paddingStart="5dp"
            tools:ignore="RtlSymmetry" />


    </LinearLayout>

</LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:backgroundTint="#FF7043"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/save"
        android:id="@+id/btnSave"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/timeInput" />


</androidx.constraintlayout.widget.ConstraintLayout>